Use "is version" instead of version_compare for Ansible
version_compare is deprecated since Ansible version 2.5
and was removed in v2.9. With this change, we use the
new "is version" method.

--- a/templates/configure_slurm.py.j2
+++ b/templates/configure_slurm.py.j2
@@ -77,7 +77,7 @@ SlurmctldDebug=3
 SlurmdDebug=3
 #SlurmdLogFile=
 NodeName=$hostname CPUs=$cpus RealMemory=$memory State=UNKNOWN
-PartitionName=$partition_name Nodes=$hostname Default=YES MaxTime=INFINITE State=UP Shared=YES {% if ansible_distribution=='Ubuntu' and ansible_distribution_version | version_compare('15.04', '>=') %}DefMemPerCPU=$mem_per_cpu
+PartitionName=$partition_name Nodes=$hostname Default=YES MaxTime=INFINITE State=UP Shared=YES {% if ansible_distribution=='Ubuntu' and ansible_distribution_version is version('15.04', '>=') %}DefMemPerCPU=$mem_per_cpu
 {% endif %}
 '''
 slurm_status = subprocess.check_output(['slurmd', '-C'])
